crates/apollo-compiler/test_data/diagnostics/0034_object_type_definition_with_missing_transitive_fields.txt
Error: type does not satisfy interface `Node`: missing field `id`
   ╭─[0034_object_type_definition_with_missing_transitive_fields.graphql:1:1]
   │
 1 │ ╭─▶ type Query implements Node & Resource {
   │ │                         ──┬─  
   │ │                           ╰─── implementation of interface Node declared here
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── add `id` field to this object
   │ 
 6 │       id: ID!
   │       ───┬───  
   │          ╰───── `id` was originally defined by Node here
   │     
   │     Help: An object must provide all fields required by the interfaces it implements
───╯
Error: type does not satisfy interface `Resource`: missing field `width`
    ╭─[0034_object_type_definition_with_missing_transitive_fields.graphql:1:1]
    │
  1 │ ╭─▶ type Query implements Node & Resource {
    │ │                                ────┬───  
    │ │                                    ╰───── implementation of interface Resource declared here
    ┆ ┆   
  3 │ ├─▶ }
    │ │       
    │ ╰─────── add `width` field to this object
    │ 
 10 │       width: Int
    │       ─────┬────  
    │            ╰────── `width` was originally defined by Resource here
    │     
    │     Help: An object must provide all fields required by the interfaces it implements
────╯

